# tpe_contract_intelligence_risk_copilot

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  logging_config.py  settings.py
contract_intelligence/: __init__.py
contract_intelligence/agents/: __init__.py
contract_intelligence/config/: __init__.py  settings.py
contract_intelligence/core/: __init__.py
contract_intelligence/services/: __init__.py  azure_blob.py  azure_document_intelligence.py  azure_key_vault.py  azure_language.py  azure_openai.py  azure_search.py  azure_service_factory.py  azure_sql.py  base.py
contract_intelligence/utils/: __init__.py  exceptions.py  logging.py
src/: __init__.py
src/agents/: __init__.py  base_agent.py  clause_analysis_agent.py  compliance_agent.py  extraction_agent.py  guarded_llm_invoker.py  indexing_agent.py  ingestion_agent.py  language_enrichment_agent.py  orchestrator_agent.py  persistence_agent.py  risk_scoring_agent.py  summarization_agent.py
src/domain/: __init__.py  contract.py  enums.py
src/infrastructure/: __init__.py  azure_blob_storage.py  azure_document_intelligence.py  azure_evaluator.py  azure_guardrails.py  azure_key_vault.py  azure_language_service.py  azure_openai_client.py  azure_search_index.py  azure_sql_repository.py
src/interfaces/: __init__.py  document_processor.py  evaluator.py  guardrail.py  language_analyzer.py  llm_client.py  repository.py  search_indexer.py  secret_provider.py  storage.py
tests/: __init__.py  conftest.py  fakes.py  test_pipeline.py  test_risk_scoring.py
(+17 files in other folders)
