[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-intelligence"
version = "1.0.0"
description = "Multi-agent AI solution for contract intelligence and risk scoring"
authors = [
    {name = "Vikas Sinha", email = "vikas@example.com"},
]
dependencies = [
    "azure-ai-projects>=1.0.0",
    "azure-ai-evaluation>=1.0.0",
    "azure-ai-openai>=1.0.0",
    "azure-ai-documentintelligence>=1.0.0",
    "azure-ai-textanalytics>=5.3.0",
    "azure-search-documents>=11.4.0",
    "azure-storage-blob>=12.17.0",
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "sqlalchemy>=2.0.0",
    "pyodbc>=5.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=23.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["contract_intelligence*"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"